--- a/Views/index.html
+++ b/Views/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Css/styles.css">
-    <title>hahaha</title>
-</head>
-<body>
-    <h1>one piece</h1>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/Css/styles.css">
+        <!-- title will changed later-->
+        <title>Main Page</title>
+    </head>
+
+    <body>
+        <script src="/Js/app.js"></script>
+        <!-- the header is static between all pages except log in
+        Note: we need to find a solution for log in page for header
+        Maybe we can use {if log-in} {end} 
+        -->
+        <header>
+            <ul>
+                <li><a href=""> Create Post</a></li>
+                <li><a href="">messages</a></li>
+                <li><a href="">Log out</a></li>
+            </ul>
+            <h1 class="UserName"></h1>
+        </header>
+        
+        <main id="content">
+                <!-- Dynamic contant-->
+        </main>
+        
+        <footer>
+            <p>&copy; 2025 Greatest Real-Time Forum .All rights reserved</p>
+        </footer>
+    </body>
+
 </html>
