--- a/Views/index.html
+++ b/Views/index.html
@@ -16,12 +16,17 @@
         Maybe we can use {if log-in} {end} 
         -->
         <header>
-            <ul>
-                <li><a href=""> Create Post</a></li>
-                <li><a href="">messages</a></li>
-                <li><a href="">Log out</a></li>
-            </ul>
-            <h1 class="UserName"></h1>
+            <div class="headerDiv">
+                <div class="Project-Name"><a href="">Real-Time Forum</a></div>
+                <nav>
+                <ul>
+                    <li><a href=""> Create Post</a></li>
+                    <li><a href="">messages</a></li>
+                    <button><a href="">Log out</a></button>
+                </ul>
+                </nav>
+                <!-- <h1 class="UserName">hashem</h1> -->
+            </div>
         </header>
         
         <main id="content">
