done with Session , and a little in database , with some of handlers

--- a/Views/index.html
+++ b/Views/index.html
@@ -17,12 +17,12 @@
         -->
         <header>
             <div class="headerDiv">
-                <div class="Project-Name"><a href="">Real-Time Forum</a></div>
+                <div class="Project-Name"><a href="/">Real-Time Forum</a></div>
                 <nav>
                 <ul>
-                    <li><a href=""> Create Post</a></li>
-                    <li><a href="">messages</a></li>
-                    <button><a href="">Log out</a></button>
+                    <li><a href="/Create"> Create Post</a></li>
+                    <li><a href="/Direct">messages</a></li>
+                    <button><a href="/logout">Log out</a></button>
                 </ul>
                 </nav>
                 <!-- <h1 class="UserName">hashem</h1> -->
