--- a/Css/styles.css
+++ b/Css/styles.css
@@ -7,6 +7,9 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html , body {
@@ -18,6 +21,7 @@ html , body {
 body {
     display: flex;
     flex-direction: column;
+    
 }
 header {
     background-color: #3572EF;
@@ -61,7 +65,7 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-button{
+.Headerbutton{
     background-color: #A7E6FF ;
     border: none;
     border-radius: 10px;
@@ -69,7 +73,7 @@ button{
     width:90px ;
     cursor: pointer;
 }
-button a{
+Headerbutton a{
     color: black;
     font-weight: bold;
     font-size: 15px;
@@ -92,3 +96,118 @@ footer p {
     font-size: 20px;
     margin: 0;
 }
+
+/* ----------------- Register Style ------------------*/
+.register {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    
+}
+
+
+.register-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 350px;
+    background: #3ABEF9;
+    padding: 20px;
+    border-radius: 20px;
+    position: relative;
+}
+
+.title {
+    font-size: 28px;
+    color: #050C9C;
+    font-weight: 600;
+    letter-spacing: 0.3px;
+    position: relative;
+    text-align: center;
+}
+.message, .signin {
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+}
+.signin a {
+    color: #3572EF;
+    text-decoration: none;
+    transition: 0.3s;
+}
+.signin a:hover{
+    color: #050C9C;
+}
+
+.form-group {
+    display: flex;
+    width: 100%;
+    gap: 6px;
+}
+.register-form label {
+    position: relative;
+}
+.register-form label input {
+    width: 100%;
+    padding: 10px 10px 20px 20px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+}
+.register-form label input + span {
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    color: #24323d ;
+    font-size: 0.9em;
+    cursor: text;
+    transition: 0.3s ease;
+}
+
+.register-form label input:placeholder-shown + span {
+    top: 15px;
+    font-size: 0.9em;
+}
+
+.register-form label input:focus + span,
+.register-form label input:valid + span {
+    top: 30px;
+    font-size: 0.7em;
+    font-weight: 600;
+}
+.register-form label input:valid + span {
+    color: #050C9C;
+}
+.register-form label .icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    color: #24323d;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+}
+
+.submitRegister {
+    border: none;
+    outline: none;
+    background: #3572EF;
+    padding: 10px;
+    border-radius: 10px;
+    color: #A7E6FF;
+    font-size: 16px;
+    transform: 0.3s ease;
+    cursor: pointer;
+}
+.submitRegister:hover {
+    background: #050C9C;
+    transition: 0.3s;
+}
+
+/* ----------------End Of Register Style ------------------- */
