--- a/Views/index.html
+++ b/Views/index.html
@@ -15,6 +15,7 @@
         Note: we need to find a solution for log in page for header
         Maybe we can use {if log-in} {end} 
         -->
+        <!-- {{if .IsLoggedIn}} -->
         <header>
             <div class="headerDiv">
                 <div class="Project-Name"><a href="/">Real-Time Forum</a></div>
@@ -22,15 +23,65 @@
                 <ul>
                     <li><a href="/Create"> Create Post</a></li>
                     <li><a href="/Direct">messages</a></li>
-                    <button><a href="/logout">Log out</a></button>
+                    <button class="Headerbutton"><a href="/logout">Log out</a></button>
                 </ul>
                 </nav>
                 <!-- <h1 class="UserName">hashem</h1> -->
             </div>
         </header>
+        <!-- {{end}} -->
         
         <main id="content">
                 <!-- Dynamic contant-->
+
+            <div class="register">
+                
+                    <form action="/register" class="register-form" method="post">
+                    <p class="title">Register</p>
+                    <p class="message">Sign up here </p>
+                    <div class="form-group">
+                        <label>
+                            <input type="text" name="first_name"  required>
+                            <span>First name</span>
+                        </label>
+                        <label>
+                            <input type="text" name="last_name" required>
+                            <span>Last name</span>
+                        </label>
+                    </div>
+                    <label>
+                        <input type="text" name="username"  required>
+                        <span>username</span>
+                    </label>
+                    <label>
+                        <input type="email" name="email"  required>
+                        <span>Email</span>
+                    </label>
+                    <label>
+                        <input type="text" name="age"  required>
+                        <span>Age</span>
+                    </label>
+                    <label>
+                        <input type="text" name="gender"  required>
+                        <span>Gender</span>
+                    </label>
+                    <label>
+                        <input type="password" id="password" name="password"  required>
+                        <span>Password</span>
+                        <span class="icon" id="togglePassword"><i class="far fa-eye-slash" ></i></span>
+                    </label>
+                    <label>
+                        <input type="password" id="passwordConfirm" >
+                        <span>Confirm password</span>
+                        <span class="icon" id="togglePasswordConfirm"><i class="far fa-eye-slash" ></i></span>
+                    </label>
+                <button class="submitRegister">Submit</button>
+                <p class="signin">
+                    Already have an account? <a href="/login">Signin </a>
+                </p>
+                </form>
+            
+            </div>
         </main>
         
         <footer>
