--- a/Views/index.html
+++ b/Views/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/Css/styles.css">
-        <!-- title will changed later-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <title>Main Page</title>
     </head>
 
@@ -80,7 +80,28 @@
                     Already have an account? <a href="/login">Signin </a>
                 </p>
                 </form>
-            
+                <script>
+                    const togglePasswordVisibility = (inputElement,ToggleElemet) => {
+                        if(inputElement.type === "password") {
+                            inputElement.type = "text";
+                            toggleElemet.innerHTML = `<i class="far fa-eye"></i>`
+                        }else {
+                             inputElement.type = "password";
+                            toggleElemet.innerHTML = `<i class="far fa-eye-slash"></i>`
+                        }
+                    }
+                    const passwordInput = document.getElementById("password");
+                    const togglePassword = document.getElementById("togglePassword");
+                    const passwordConfirm = document.getElementById("passwordConfirm");
+                    const togglePasswordConfirm = document.getElementById("togglePasswordConfirm");
+
+                    togglePassword.addEventListener("click", () => {
+                        togglePasswordVisibility(passwordInput,togglePassword);
+                    });
+                    togglePasswordConfirm.addEventListener("click",() => {
+                        togglePasswordVisibility(passwordConfirm,togglePasswordConfirm)
+                    });
+                </script>
             </div>
         </main>
         
