--- a/Views/index.html
+++ b/Views/index.html
@@ -15,7 +15,7 @@
         Note: we need to find a solution for log in page for header
         Maybe we can use {if log-in} {end} 
         -->
-        <!-- {{if .IsLoggedIn}} -->
+        {{if .IsLoggedIn}}
         <header>
             <div class="headerDiv">
                 <div class="Project-Name"><a href="/">Real-Time Forum</a></div>
@@ -29,7 +29,7 @@
                 <!-- <h1 class="UserName">hashem</h1> -->
             </div>
         </header>
-        <!-- {{end}} -->
+        {{end}}
         
         <main id="content">
                 <!-- Dynamic contant-->
