--- a/Css/styles.css
+++ b/Css/styles.css
@@ -13,7 +13,7 @@
 }
 
 html , body {
-    background-color: #A7E6FF;
+    background: linear-gradient(#A7E6FF , #0f6ae0) ;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -211,3 +211,78 @@ footer p {
 }
 
 /* ----------------End Of Register Style ------------------- */
+
+
+
+
+/* ----------------Start of create post Style ------------------- */
+
+
+.create-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.create-left {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+
+.create-left-title h2 {
+    font-weight: 600;
+    color: #0f6ae0;
+    font-size: 40px;
+    margin-bottom: 5px;
+}
+.create-left-title hr {
+
+    border: none;
+    width: 120px;
+    height: 5px;
+    background-color: #0f6ae0;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.create-title{
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 50px;
+}
+.create-left textarea{
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+
+.create-title:focus{
+    border: 2px solid #050C9C;
+}
+.create-title::placeholder{
+    color: #a9a9a9;
+}
+.create-left button {
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    gap: 10px;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(270deg, #ff994f,#3ABEF9);
+    cursor: pointer;
+}
+
+.create-right{
+    width: 500px ;
+}
