--- a/Css/styles.css
+++ b/Css/styles.css
@@ -286,3 +286,51 @@ footer p {
 .create-right{
     width: 500px ;
 }
+
+/*------------Main Page Style ----------------*/
+
+.content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 120px; /* Adjust for fixed navbar */
+    
+}
+.posts {
+    width: 70%; /* Set the posts section width */
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    overflow-y: auto;
+    height: 80vh;
+}
+
+.content {
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: rgba(185, 191, 245, 0.9);
+    border-radius: 20px;
+    border: 2px solid #264143;
+    box-shadow: 3px 4px 0px 1px #E99F4C;
+    color: #312f2f;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+.info h1 {
+    font-size: 50px;
+    text-align: left;
+    color: #312f2f;
+}
+
+.info p {
+    margin: 20px 0 25px;
+    font-size: 18px;
+    text-align: left;
+    color: #555;
+}
