--- a/Css/styles.css
+++ b/Css/styles.css
@@ -290,14 +290,12 @@ footer p {
 /*------------Main Page Style ----------------*/
 
 .content-wrapper {
-    display: flex;
     justify-content: space-between;
     gap: 20px;
-    margin-top: 120px; /* Adjust for fixed navbar */
     
 }
 .posts {
-    width: 70%; /* Set the posts section width */
+     /* Set the posts section width */
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
@@ -312,10 +310,10 @@ footer p {
 .content {
     width: 100%;
     margin-bottom: 20px;
-    background-color: rgba(185, 191, 245, 0.9);
+    background-color: rgba(120, 127, 189, 0.9);
     border-radius: 20px;
     border: 2px solid #264143;
-    box-shadow: 3px 4px 0px 1px #E99F4C;
+    box-shadow: 3px 4px 0px 1px #7f67c0;
     color: #312f2f;
     padding: 20px;
     box-sizing: border-box;
