--- a/Views/index.html
+++ b/Views/index.html
@@ -67,14 +67,14 @@
                 </div>     
                 
                 <script>
-                    const socket = new WebSocket('ws://localhost:8080/ws');
+                    const socket = new WebSocket(`ws://${window.location.hostname}:8080/ws`);
                     const messagesContainer = document.getElementById('messages');
                     const messageInput = document.getElementById('messageInput');
                     const sendMessageButton = document.getElementById('sendMessage');
                     const userList = document.getElementById('userList');
                     const chatWith = document.getElementById('chatWith');
 
-                    fetch('http://localhost:8080/users')
+                    fetch('http://0.0.0.0:8080/users')
                         .then(response => response.json())
                         .then(users => {
                             users.forEach(user => {
