--- a/Css/styles.css
+++ b/Css/styles.css
@@ -508,6 +508,9 @@ footer p {
     text-align: center;
     margin-bottom: 20px;
 }
+.sidebar li {
+    color: white;
+}
 
 .user-list {
     list-style: none;
@@ -594,4 +597,7 @@ footer p {
     .chat-area {
         width: 100%;
     }
+}
+.hidden {
+    display: none;
 }
