--- a/Css/styles.css
+++ b/Css/styles.css
@@ -557,6 +557,11 @@ footer p {
     background-color: #ecf0f1;
     border-radius: 5px;
 }
+ .MessageContent h5 {
+    border: white;
+    size: 100px;
+    border-radius: 3px;
+}
 
 .chat-input-container {
     display: flex;
