--- a/Css/styles.css
+++ b/Css/styles.css
@@ -606,3 +606,36 @@ footer p {
 .hidden {
     display: none;
 }
+
+
+
+
+/* ----------------------------- 404 Page --------------------------------- */
+
+.container-404 {
+    text-align: center;
+}
+
+.container-404 h1 {
+    font-size: 3em;
+    color: #e74c3c;
+}
+
+.container-404 p {
+    font-size: 1.2em;
+}
+
+.container-404 button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.container-404 button:hover {
+    background-color: #2980b9;
+}
