--- a/Views/index.html
+++ b/Views/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <script src="/Js/app.js"></script>
+        <script type="module" src="/Js/app.js"></script>
         <!-- the header is static between all pages except log in
         Note: we need to find a solution for log in page for header
         Maybe we can use {if log-in} {end} 
