--- a/Views/index.html
+++ b/Views/index.html
@@ -11,6 +11,7 @@
 
     <body>
         <script src="/Js/app.js"></script>
+        <script src="/Js/pages/login.js"></script>
         <!-- the header is static between all pages except log in
         Note: we need to find a solution for log in page for header
         Maybe we can use {if log-in} {end} 
