--- a/Views/index.html
+++ b/Views/index.html
@@ -4,14 +4,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Css/styles.css">
+        <!-- <link rel="stylesheet" href="/Css/styles.css"> -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <title>Main Page</title>
     </head>
 
     <body>
-        <script src="/Js/app.js"></script>
-        <script src="/Js/pages/login.js"></script>
+        <script type="module" src="../Js/app.js"></script>
+        <script type="module" src="../Js/"></script>
+        <script type="module" src="../Js/pages/home.js"></script>
+        <script type="module" src="../Js/pages/register.js"></script>
+        <script type="module" src="../Js/utils/navigation.js"></script>
+    
+        
+       
         <!-- the header is static between all pages except log in
         Note: we need to find a solution for log in page for header
         Maybe we can use {if log-in} {end} 
