--- a/Views/index.html
+++ b/Views/index.html
@@ -58,10 +58,11 @@
                 
                     
         </main>
-        
+        {{if .IsLoggedIn}} 
         <footer>
             <p>&copy; 2025 Greatest Real-Time Forum .All rights reserved</p>
         </footer>
+        {{end}}
     </body>
 
 </html>
