--- a/Views/index.html
+++ b/Views/index.html
@@ -11,11 +11,11 @@
 
     <body>
         <script type="module" src="../Js/app.js"></script>
-        <script type="module" src="../Js/"></script>
+        <!-- <script type="module" src="../Js/"></script>
         <script type="module" src="../Js/pages/home.js"></script>
         <script type="module" src="../Js/pages/register.js"></script>
         <script type="module" src="../Js/utils/navigation.js"></script>
-    
+     -->
         
        
         <!-- the header is static between all pages except log in
