category must select red error

--- a/Css/messages.css
+++ b/Css/messages.css
@@ -190,17 +190,8 @@ main#content {
 .MessageContent h5 strong {
     margin-right: 5px;
     color: #444;
-}
-.MessageContent h6 {
-    margin: 0;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.4;
-}
-.MessageContent.sent h6,
-.MessageContent.sent h6  {
-    color: white;
-}
+}zz
+
 /* Style for messages sent by the current user */
 .MessageContent.sent {
     background-color: #C29DC2;
