fix refresh and list messages

--- a/Views/index.html
+++ b/Views/index.html
@@ -30,7 +30,6 @@
                 <nav>
                 <ul>
                     <li><a href="/Create"> Create Post</a></li>
-                    <li><a href="/Direct">messages</a></li>
                     <button class="Headerbutton" id="logoutBtn">Log out</button>
                         <script>
                             document.getElementById("logoutBtn").addEventListener("click", () => {
@@ -49,7 +48,10 @@
             </div>
         </header>
         {{end}}
-        
+        <main id="content1">
+            <script type="module" src="../Js/pages/direct.js"></script>
+
+        </main>
         <main id="content">
                 <!-- Dynamic contant-->
 
