--- a/Views/index.html
+++ b/Views/index.html
@@ -65,6 +65,13 @@
             <p>&copy; 2025 Greatest Real-Time Forum .All rights reserved</p>
         </footer>
         {{end}}
+
+        <div class="chat-toggle-button" id="chatToggleBtn">&#x25B2;</div>
+
+<!-- Chat drawer container -->
+<div class="global-chat-container hidden" id="globalChatContainer">
+    <!-- This will be populated dynamically by direct.js -->
+</div>
     </body>
 
 </html>
